[package]
name = "sequoia-openpgp"
description = "OpenPGP data types and associated machinery"
version = "2.0.0"
authors = [
    "Igor Matuszewski <igor@sequoia-pgp.org>",
    "Justus Winter <justus@sequoia-pgp.org>",
    "Kai Michaelis <kai@sequoia-pgp.org>",
    "Neal H. Walfield <neal@sequoia-pgp.org>",
    "Nora Widdecke <nora@sequoia-pgp.org>",
    "Wiktor Kwapisiewicz <wiktor@sequoia-pgp.org>",
]
build = "build.rs"
documentation = "https://docs.rs/sequoia-openpgp"
autobenches = false
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia"
readme = "README.md"
keywords = ["cryptography", "openpgp", "pgp", "encryption", "signing"]
categories = ["cryptography", "authentication", "email"]
license = "LGPL-2.0-or-later"
edition = "2021"
rust-version = "1.79"

[badges]
gitlab = { repository = "sequoia-pgp/sequoia" }
maintenance = { status = "actively-developed" }

[dependencies]
openssl = "0.10.55"
openssl-sys = "0.9.90"
anyhow = "1.0.18"
argon2 = "0.5"
buffered-reader = { path = "../buffered-reader", version = "1.3.0", default-features = false }
base64 = ">= 0.21, < 0.23"
bzip2 = { version = ">= 0.4, < 0.6", optional = true }
dyn-clone = "1"
flate2 = { version = "1.0.1", optional = true }
idna = ">= 1.0.3, < 2"
lalrpop-util = "0.20"
libc = "0.2.66"
memsec = { version = ">=0.5, <0.8", default-features = false }
regex = "1"
regex-syntax = "0.8"
sha1collisiondetection = { version = "0.3.1", default-features = false, features = ["std"] }
thiserror = ">=1, <3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[target.'cfg(windows)'.dependencies]
win-crypto-ng = { version = "0.5.1", features = ["rand", "block-cipher"], optional = true }
winapi = { version = "0.3.8", default-features = false, features = ["bcrypt"], optional = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
chrono = { version = "0.4.10", default-features = false, features = ["std", "wasmbind", "clock"] }
getrandom = { version = "0.2", features = ["js"] }

[build-dependencies]
lalrpop = { version = "0.20", default-features = false }

[dev-dependencies]
quickcheck = { version = "1", default-features = false }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
rpassword = "7.0"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["compression", "crypto-openssl"]
crypto-openssl = []
compression = ["compression-deflate", "compression-bzip2"]
compression-deflate = ["dep:flate2", "buffered-reader/compression-deflate"]
compression-bzip2 = ["dep:bzip2", "buffered-reader/compression-bzip2"]
allow-experimental-crypto = []
allow-variable-time-crypto = []
__implicit-crypto-backend-for-tests = []

[lib]
bench = false

[[example]]
name = "pad"
required-features = ["compression-deflate"]

[[bench]]
name = "run_benchmarks"
harness = false

[[example]]
name = "secret-leak-detector"
path = "tests/secret-leak-detector/detector.rs"

[patch.crates-io]
openssl = { git = "https://github.com/teythoon/rust-openssl", branch = "justus/pqc" }
openssl-sys = { git = "https://github.com/teythoon/rust-openssl", branch = "justus/pqc" }


# rustc version 1.80 adds the `unexpected_cfgs` warning, which warns
# about unexpected cfg condition names.  Extend the list of cfg
# condition names to include those that we use.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(osslconf, values("OPENSSL_NO_BF"))',
    'cfg(osslconf, values("OPENSSL_NO_CAMELLIA"))',
    'cfg(osslconf, values("OPENSSL_NO_CAST"))',
    'cfg(osslconf, values("OPENSSL_NO_IDEA"))',
    'cfg(osslconf, values("OPENSSL_NO_OCB"))',
] }